@@ -21,7 +21,7 @@ Current and previous core designers:
 * Matthias Nüesch
 
 
-Contributors (based on gitlog, 537 unique authors):
+Contributors (based on gitlog, 541 unique authors):
 
 * Антон Евжаков
 * A. Bram Neijt
@@ -44,6 +44,7 @@ Contributors (based on gitlog, 537 unique authors):
 * Alex Cucu
 * Alex Marandon
 * Alexander Paramonov
+* Alexandre Joly
 * Alexandre Leray
 * Alexey Subbotin
 * Aliaksei Urbanski
